Fix layout bug

--- a/packages/client/src/components/Forms/Forms.module.css
+++ b/packages/client/src/components/Forms/Forms.module.css
@@ -115,6 +115,13 @@
     gap: 20px;
 }
 
+.mainLayoutColumn {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
 .personInfoRow {
     display: flex;
     align-items: center;
